# litellm-triage

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  config.test.yaml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
helm/litellm-triage/: Chart.yaml  README.md  values.yaml
helm/litellm-triage/templates/: _helpers.tpl  configmap.yaml  deployment-litellm.yaml  deployment-ollama.yaml  deployment-presidio-analyzer.yaml  deployment-presidio-anonymizer.yaml  ingress.yaml  secret.yaml  service-litellm.yaml  service-ollama.yaml  service-presidio-analyzer.yaml  service-presidio-anonymizer.yaml
litellm_triage/: __init__.py  config.py  guardrail.py
litellm_triage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
litellm_triage/classifier/: base.py  local_llm.py  presidio.py
tests/: __init__.py  test_classifier.py  test_guardrail.py
