[project]
name = "litellm-triage"
version = "0.1.0"
description = "Content-aware privacy routing guardrail for LiteLLM"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "respx"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["litellm_triage*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
